@@ -62,12 +62,12 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.StringJoiner;
-import java.util.stream.Collectors;
 
 import static io.ballerina.cli.launcher.LauncherUtils.createLauncherException;
 import static org.ballerinalang.test.runtime.util.TesterinaConstants.COVERAGE_DIR;
@@ -482,11 +482,10 @@ public final class TestUtils {
      */
     public static String getClassPath(JBallerinaBackend jBallerinaBackend, Package currentPackage) {
         JarResolver jarResolver = jBallerinaBackend.jarResolver();
+        Set<Path> jars = new HashSet<>(getModuleJarPaths(jBallerinaBackend, currentPackage));
 
-        List<Path> dependencies = getTestDependencyPaths(currentPackage, jarResolver);
-
-        List<Path> jarList = getModuleJarPaths(jBallerinaBackend, currentPackage);
-        dependencies.removeAll(jarList);
+        List<Path> dependencies = getTestDependencyPaths(currentPackage, jarResolver)
+                .stream().filter(dependency -> !jars.contains(dependency)).toList();
 
         StringJoiner classPath = joinClassPaths(dependencies);
         return classPath.toString();
@@ -522,7 +521,7 @@ public final class TestUtils {
                 }
             }
         }
-        return dependencies.stream().distinct().collect(Collectors.toList());
+        return dependencies.stream().distinct().toList();
     }
 
     /**
@@ -549,7 +548,7 @@ public final class TestUtils {
             }
         }
 
-        return moduleJarPaths.stream().distinct().collect(Collectors.toList());
+        return moduleJarPaths.stream().distinct().toList();
     }
 
     private static PlatformLibrary getCodeGeneratedTestLibrary(JBallerinaBackend jBallerinaBackend,
