@@ -50,7 +50,6 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -87,7 +86,7 @@ final class BIRTestUtils {
             return paths.filter(file -> Files.isRegularFile(file))
                     .map(file -> file.toAbsolutePath().normalize().toString())
                     .filter(file -> file.endsWith(".bal") && !file.contains("negative") && !file.contains("subtype"))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
