@@ -201,7 +201,7 @@ public final class RecordUtil {
     public static List<RecordFieldSymbol> getMandatoryRecordFields(RecordTypeSymbol recordType) {
         return recordType.fieldDescriptors().values().stream()
                 .filter(field -> !field.hasDefaultValue() && !field.isOptional())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -239,7 +239,7 @@ public final class RecordUtil {
                     .map(tSymbol -> {
                         RecordTypeSymbol recordTypeSymbol = (RecordTypeSymbol) CommonUtil.getRawType(tSymbol);
                         return RawTypeSymbolWrapper.from(tSymbol, recordTypeSymbol);
-                    }).collect(Collectors.toList());
+                    }).toList();
         }
 
         return Collections.emptyList();
