@@ -27,7 +27,6 @@ import org.ballerinalang.langserver.completions.providers.AbstractCompletionProv
 import org.ballerinalang.langserver.completions.util.Snippet;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Completion provider for {@link ReceiveActionNode}.
@@ -47,7 +46,7 @@ public class ReceiveActionNodeContext extends AbstractCompletionProvider<Receive
         List<Symbol> visibleSymbols = context.visibleSymbols(context.getCursorPosition());
         List<Symbol> filteredWorkers = visibleSymbols.stream()
                 .filter(symbol -> symbol.kind() == SymbolKind.WORKER)
-                .collect(Collectors.toList());
+                .toList();
         List<LSCompletionItem> completionItems = this.getCompletionItemList(filteredWorkers, context);
         completionItems.add(new SnippetCompletionItem(context, Snippet.KW_FUNCTION.get()));
         this.sort(context, node, completionItems);
