@@ -46,7 +46,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import static org.ballerinalang.langserver.completions.util.SortingUtil.genSortText;
 
@@ -207,7 +206,7 @@ public final class ModulePartNodeContextUtil {
      */
     public static List<Symbol> serviceTypeDescContextSymbols(BallerinaCompletionContext context) {
         List<Symbol> visibleSymbols = context.visibleSymbols(context.getCursorPosition());
-        return visibleSymbols.stream().filter(serviceTypeDescPredicate()).collect(Collectors.toList());
+        return visibleSymbols.stream().filter(serviceTypeDescPredicate()).toList();
     }
 
     /**
