@@ -27,11 +27,10 @@ import org.ballerinalang.langserver.common.utils.ModuleUtil;
 import org.ballerinalang.langserver.commons.BallerinaCompletionContext;
 import org.ballerinalang.langserver.commons.PositionedOperationContext;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 /**
  * Holds the set of utilities to get the qualified name reference associated Completion Items.
@@ -71,7 +70,7 @@ public final class QNameRefCompletionUtil {
                         || symbol.kind() == SymbolKind.TYPE_DEFINITION
                         || symbol.kind() == SymbolKind.CLASS
                         || symbol instanceof VariableSymbol)
-                .collect(Collectors.toList())).orElseGet(ArrayList::new);
+                .toList()).orElseGet(Collections::emptyList);
     }
 
     /**
@@ -110,8 +109,8 @@ public final class QNameRefCompletionUtil {
                 QNameRefCompletionUtil.getAlias(qNameRef));
         return module.map(moduleSymbol -> moduleSymbol.allSymbols().stream()
                 .filter(predicate)
-                .collect(Collectors.toList()))
-                .orElseGet(ArrayList::new);
+                .toList())
+                .orElseGet(Collections::emptyList);
     }
 
     /**
@@ -127,8 +126,8 @@ public final class QNameRefCompletionUtil {
                 QNameRefCompletionUtil.getAlias(qNameRef));
         return module.map(symbol -> symbol.allSymbols().stream()
                 .filter(CommonUtil.typesFilter())
-                .collect(Collectors.toList()))
-                .orElseGet(ArrayList::new);
+                .toList())
+                .orElseGet(Collections::emptyList);
     }
 
     /**
