@@ -74,7 +74,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 
@@ -281,7 +280,7 @@ public final class SignatureHelpUtil {
             filteredContent = visibleSymbols.stream()
                     .filter(symbolPredicate.and(symbol -> symbol.getName().isPresent()
                             && symbol.getName().get().equals(funcName)))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return filteredContent.stream().findAny();
